--- a/style.css
+++ b/style.css
@@ -1,20 +1,27 @@
 body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 18px;
     line-height: 34px;
     color: teal;
     
   }
 
-  .Name {
+  #name {
     float: left;
     width: 250px;
-    height: 90px;
-    font-family: Georgia, Times, "Times New Roman", serif;
     font-size: 30px;
-    font-weight: 700;
     line-height: 90px;
     color: white;
     text-align: center;
     background: teal;
+  }
+  #header {
+    position: fixed;
+    width: 100%;
+    overflow: auto;
+    border-bottom: 2px solid lightgrey;
+  }
+/* bootstrap navbar */
+  .navbar {
+    margin-top: 15px;
   }
