--- a/style.css
+++ b/style.css
@@ -58,3 +58,18 @@ body {
     margin: 20px 0 25px;
     overflow: auto;
   }
+
+  h3 {
+      position: absolute;
+      bottom: 20px;
+      width: 100%;
+      padding: 15px;
+      margin-bottom: 0;
+      font-weight: 300;
+      line-height: 30px;
+      color: #fff;
+      text-align: center;
+      background: #4aaaa5;
+      border-bottom: 0;
+      max-width: 275px;
+    }
